--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
-twitter.consumerKey=<<CHANGE ME>>
-twitter.consumerSecret=<<CHANGE ME>>
-twitter.accessToken=<<CHANGE ME>>
-twitter.accessTokenSecret=<<CHANGE ME>>
+twitter.consumerKey=g3eYpoLPa3EU9Gx1UtlnQFX5e
+twitter.consumerSecret=	nlFDyTqAtPzkdKaMT8eD4xGfXDhphUpXxAxR4bi9n2OC3KWdYQ
+twitter.accessToken=34419367-5YfvOsY3n4nJfX34qZVt5FfnaZDeWHTUmcD5El3mw
+twitter.accessTokenSecret=6infvLaJxfg5Y37THvcjRKUKp5wlQHdQ5dZpLcxa0Wk8t
+
 
